--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Minha Página</title>
     <style>
+        background-color: #000000;
+        
         /* desktop-wallpaper-terminator-t-800-terminator-thumbnail (1) 1 */
         .desktop-wallpaper {
             position: absolute;
