--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Minha Página</title>
     <style>
         background-color: #000000;
-
+        body{
+  backgroud-color: #000000;
+}
         /* desktop-wallpaper-terminator-t-800-terminator-thumbnail (1) 1 */
         .desktop-wallpaper {
             position: absolute;
